# nvxpy

./: .coverage  .coveragerc  README.md  pyproject.toml
.github/workflows/: publish.yaml  test.yaml
examples/: functions.py  global_optimizers.py  mip_problems.py  neural_network.py  norm_lower_bound.py  performance.py  perspective_cone.py  projective_constraints.py  scheduling.py  simple_tsp.py  solver_usage.py
src/nvxpy/: __init__.py  compiler.py  constants.py  constraint.py  expression.py  parser.py  problem.py  variable.py
src/nvxpy/atoms/: __init__.py  abs.py  amax.py  amin.py  det.py  exp.py  log.py  logdet.py  maximum.py  minimum.py  norm.py  polar.py  sqrt.py  sum.py  trace.py
src/nvxpy/constructs/: __init__.py  function.py  graph.py
src/nvxpy/sets/: __init__.py  discrete_set.py  integer_set.py  perspective_cone.py  special_orthogonal.py
src/nvxpy/solvers/: __init__.py  base.py  bnb_backend.py  global_scipy_backend.py  ipopt_backend.py  knitro_backend.py  scipy_backend.py
src/nvxpy/solvers/bnb/: __init__.py  backend.py  branching.py  cuts.py  heuristics.py  node.py  utils.py
tests/: _test_nlp.py  _test_nn.py  conftest.py  test_atoms.py  test_binary.py  test_bnb.py  test_compiler_correctness.py  test_compiler_performance.py  test_compiler_vs_python.py  test_constructs.py  test_coverage_boost.py  test_curvature.py  test_expression.py  test_global_solvers.py  test_graph.py  test_knitro.py  test_parser.py  test_sets.py  test_solver.py  test_types.py
