[project]
name = "nvxpy"
version = "0.4.0"
description = "A Python DSL for simply and easily formulating and solving non-convex optimization problems."
authors = [
    {name = "Landon Clark",email = "landonclark97@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.0,<3.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "autograd (>=1.8.0,<2.0.0)",
    "networkx (>=3.6,<4.0)",
]

[project.optional-dependencies]
knitro = ["knitro (>=15.0.1,<16.0.0)"]
cyipopt = ["cyipopt (>=1.6.1,<2.0.0)"]
all = ["cyipopt", "knitro"]

[tool.poetry]
packages = [{include = "nvxpy", from = "src"}]

[tool.poetry.extras]
ipopt = ["cyipopt"]
knitro = ["knitro"]
all = ["cyipopt", "knitro"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-cov = "^6.1.1"
ruff = "^0.11.13"
pre-commit = "^4.2.0"
matplotlib = "^3.10.3"

[tool.ruff.lint]
ignore = ["E402"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
